--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,8 @@ quarkus.http.port=8080
 quarkus.management.enabled=true
 quarkus.management.port=9000
 
-# Health checks
-quarkus.smallrye-health.root-path=/health
-
 # Metrics
+quarkus.micrometer.export.prometheus.enabled=true
 quarkus.micrometer.export.prometheus.path=/metrics
 
 # Flyway
