Start (specify, plan, tasks) new feature: database merge with yaml

--- a/src/main/resources/seed/competencies.yaml
+++ b/src/main/resources/seed/competencies.yaml
@@ -210,103 +210,26 @@ roles:
         category: "Soft Skills"
         level: "good"
 
-  - name: "Staff Engineer"
-    description: "Technical expert driving architecture and engineering practices"
+  - name: "Specialist Developer"
+    description: "Technical expert working within a team or consulting on technical details"
     requirements:
-      - skill: "Java"
-        category: "Programming"
-        level: "excellent"
-      - skill: "Python"
-        category: "Programming"
-        level: "good"
-      - skill: "SQL"
-        category: "Programming"
-        level: "excellent"
-      - skill: "Design Patterns"
-        category: "Software Design"
-        level: "excellent"
-      - skill: "Architecture"
-        category: "Software Design"
-        level: "good"
-      - skill: "API Design"
-        category: "Software Design"
-        level: "excellent"
-      - skill: "CI/CD"
-        category: "DevOps & Infrastructure"
-        level: "good"
-      - skill: "Kubernetes"
-        category: "DevOps & Infrastructure"
-        level: "decent"
-      - skill: "Cloud Platforms"
-        category: "DevOps & Infrastructure"
-        level: "decent"
-      - skill: "Unit Testing"
-        category: "Quality & Testing"
-        level: "excellent"
-      - skill: "Integration Testing"
-        category: "Quality & Testing"
-        level: "good"
-      - skill: "Code Review"
-        category: "Quality & Testing"
-        level: "excellent"
-      - skill: "Communication"
-        category: "Soft Skills"
-        level: "excellent"
-      - skill: "Mentoring"
-        category: "Soft Skills"
-        level: "good"
-      - skill: "Problem Solving"
-        category: "Soft Skills"
-        level: "excellent"
 
-  - name: "Principal Engineer"
-    description: "Technical visionary setting direction for multiple teams"
+
+  - name: "Lead Developer"
+    description: "Provide guidance to a team and ensure development flows smoothly"
     requirements:
-      - skill: "Java"
-        category: "Programming"
-        level: "excellent"
-      - skill: "Python"
-        category: "Programming"
-        level: "good"
-      - skill: "SQL"
-        category: "Programming"
-        level: "excellent"
-      - skill: "Design Patterns"
-        category: "Software Design"
-        level: "excellent"
-      - skill: "Architecture"
-        category: "Software Design"
-        level: "excellent"
-      - skill: "API Design"
-        category: "Software Design"
-        level: "excellent"
-      - skill: "CI/CD"
-        category: "DevOps & Infrastructure"
-        level: "good"
-      - skill: "Kubernetes"
-        category: "DevOps & Infrastructure"
-        level: "good"
-      - skill: "Cloud Platforms"
-        category: "DevOps & Infrastructure"
-        level: "good"
-      - skill: "Unit Testing"
-        category: "Quality & Testing"
-        level: "excellent"
-      - skill: "Integration Testing"
-        category: "Quality & Testing"
-        level: "excellent"
-      - skill: "Code Review"
-        category: "Quality & Testing"
-        level: "excellent"
-      - skill: "Communication"
-        category: "Soft Skills"
-        level: "excellent"
-      - skill: "Mentoring"
-        category: "Soft Skills"
-        level: "excellent"
-      - skill: "Problem Solving"
-        category: "Soft Skills"
-        level: "excellent"
+
+  - name: "Software Architect / Lead Developer"
+    description: "Provide guidance to a team and ensure development flows smoothly, integrate with the rest of the organization both technical and stakeholders"
+    requirements:
+
+  - name: "Software Architect"
+    description: "Provide guidance to dev teams on both development, deployment and policy, integrate with the rest of the organization both technical and stakeholders such that organization-wide improvements can be realised"
+    requirements:
+
+  - name: "Solution Architect"
+    description: "Interact with business and IT stakeholders, model processes and domains such that new functionality can be developed and requirements are clear"
+    requirements:
 
   - name: "DevOps Engineer"
     description: "Infrastructure and automation specialist"
@@ -345,9 +268,15 @@ progressions:
   - from: "Medior Developer"
     to: "Senior Developer"
   - from: "Senior Developer"
-    to: "Staff Engineer"
-  - from: "Staff Engineer"
-    to: "Principal Engineer"
+    to: "Specialist Developer"
+  - from: "Senior Developer"
+    to: "Lead Developer"
+  - from: "Lead Developer"
+    to: "Lead Developer / Software Architect"
+  - from: "Lead Developer / Software Architect"
+    to: "Software Architect"
+  - from: "Software Architect"
+    to: "Solution Architect"
   - from: "Senior Developer"
     to: "DevOps Engineer"
   - from: "Medior Developer"
