--- a/src/main/resources/seed/competencies.yaml
+++ b/src/main/resources/seed/competencies.yaml
@@ -211,25 +211,223 @@ roles:
         level: "good"
 
   - name: "Specialist Developer"
-    description: "Technical expert working within a team or consulting on technical details"
+    description: "Deep technical expert with mastery in at least one technology domain (e.g., Java ecosystem, data engineering, security) who provides specialized consulting and drives excellence in their area"
     requirements:
-
+      - skill: "Java"
+        category: "Programming"
+        level: "excellent"
+      - skill: "SQL"
+        category: "Programming"
+        level: "good"
+      - skill: "Design Patterns"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "Architecture"
+        category: "Software Design"
+        level: "decent"
+      - skill: "Unit Testing"
+        category: "Quality & Testing"
+        level: "excellent"
+      - skill: "Integration Testing"
+        category: "Quality & Testing"
+        level: "good"
+      - skill: "Code Review"
+        category: "Quality & Testing"
+        level: "excellent"
+      - skill: "Communication"
+        category: "Soft Skills"
+        level: "good"
+      - skill: "Mentoring"
+        category: "Soft Skills"
+        level: "good"
+      - skill: "Problem Solving"
+        category: "Soft Skills"
+        level: "excellent"
 
   - name: "Lead Developer"
-    description: "Provide guidance to a team and ensure development flows smoothly"
+    description: "Guides development team through technical decisions, removes blockers, and ensures delivery quality while maintaining hands-on development"
     requirements:
+      - skill: "Java"
+        category: "Programming"
+        level: "excellent"
+      - skill: "Python"
+        category: "Programming"
+        level: "decent"
+      - skill: "SQL"
+        category: "Programming"
+        level: "good"
+      - skill: "Design Patterns"
+        category: "Software Design"
+        level: "good"
+      - skill: "Architecture"
+        category: "Software Design"
+        level: "good"
+      - skill: "API Design"
+        category: "Software Design"
+        level: "good"
+      - skill: "CI/CD"
+        category: "DevOps & Infrastructure"
+        level: "decent"
+      - skill: "Unit Testing"
+        category: "Quality & Testing"
+        level: "good"
+      - skill: "Integration Testing"
+        category: "Quality & Testing"
+        level: "good"
+      - skill: "Code Review"
+        category: "Quality & Testing"
+        level: "excellent"
+      - skill: "Communication"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Mentoring"
+        category: "Soft Skills"
+        level: "good"
+      - skill: "Problem Solving"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Presentation"
+        category: "Soft Skills"
+        level: "decent"
+      - skill: "Stakeholder Management"
+        category: "Soft Skills"
+        level: "decent"
 
   - name: "Software Architect / Lead Developer"
-    description: "Provide guidance to a team and ensure development flows smoothly, integrate with the rest of the organization both technical and stakeholders"
+    description: "Hybrid role combining hands-on team leadership with architectural design, bridging technical implementation and organizational strategy"
     requirements:
+      - skill: "Java"
+        category: "Programming"
+        level: "excellent"
+      - skill: "Design Patterns"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "Architecture"
+        category: "Software Design"
+        level: "good"
+      - skill: "API Design"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "CI/CD"
+        category: "DevOps & Infrastructure"
+        level: "good"
+      - skill: "Kubernetes"
+        category: "DevOps & Infrastructure"
+        level: "decent"
+      - skill: "Cloud Platforms"
+        category: "DevOps & Infrastructure"
+        level: "decent"
+      - skill: "Code Review"
+        category: "Quality & Testing"
+        level: "excellent"
+      - skill: "Communication"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Mentoring"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Problem Solving"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Presentation"
+        category: "Soft Skills"
+        level: "good"
+      - skill: "Stakeholder Management"
+        category: "Soft Skills"
+        level: "good"
+      - skill: "iSAQB"
+        category: "Architecture Frameworks"
+        level: "decent"
 
   - name: "Software Architect"
-    description: "Provide guidance to dev teams on both development, deployment and policy, integrate with the rest of the organization both technical and stakeholders such that organization-wide improvements can be realised"
+    description: "Defines technical strategy and standards across development and platform teams, aligns architecture with IT management objectives, and ensures technical coherence across the IT organization"
     requirements:
+      - skill: "Java"
+        category: "Programming"
+        level: "good"
+      - skill: "Design Patterns"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "Architecture"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "API Design"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "CI/CD"
+        category: "DevOps & Infrastructure"
+        level: "good"
+      - skill: "Kubernetes"
+        category: "DevOps & Infrastructure"
+        level: "good"
+      - skill: "Cloud Platforms"
+        category: "DevOps & Infrastructure"
+        level: "good"
+      - skill: "Communication"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Mentoring"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Problem Solving"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Presentation"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Stakeholder Management"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "TOGAF"
+        category: "Architecture Frameworks"
+        level: "good"
+      - skill: "ArchiMate"
+        category: "Architecture Frameworks"
+        level: "good"
+      - skill: "iSAQB"
+        category: "Architecture Frameworks"
+        level: "excellent"
+
 
   - name: "Solution Architect"
-    description: "Interact with business and IT stakeholders, model processes and domains such that new functionality can be developed and requirements are clear"
+    description: "Partners with business stakeholders to understand requirements, models business processes and domains, and designs solutions that deliver business value while integrating with enterprise architecture"
     requirements:
+      - skill: "Java"
+        category: "Programming"
+        level: "decent"
+      - skill: "Design Patterns"
+        category: "Software Design"
+        level: "good"
+      - skill: "Architecture"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "API Design"
+        category: "Software Design"
+        level: "excellent"
+      - skill: "Cloud Platforms"
+        category: "DevOps & Infrastructure"
+        level: "good"
+      - skill: "Communication"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Problem Solving"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Presentation"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "Stakeholder Management"
+        category: "Soft Skills"
+        level: "excellent"
+      - skill: "TOGAF"
+        category: "Architecture Frameworks"
+        level: "excellent"
+      - skill: "ArchiMate"
+        category: "Architecture Frameworks"
+        level: "excellent"
+      - skill: "iSAQB"
+        category: "Architecture Frameworks"
+        level: "decent"
 
   - name: "DevOps Engineer"
     description: "Infrastructure and automation specialist"
