--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,4 @@ quarkus.log.category."io.quarkus.flyway".level=DEBUG
 %test.quarkus.http.test-port=0
 %test.quarkus.http.test-ssl-port=0
 %test.quarkus.management.test-port=0
+%test.competency.sync.mode=none
