competencies.yaml is now complete (dependencies exist)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ quarkus.datasource.password=competency
 # Competency Sync Mode
 # Options: none (no sync), merge (incremental updates), replace (full reset)
 # Default: none (safe for production - no automatic changes)
-competency.sync.mode=merge
+competency.sync.mode=replace
 
 # HTTP
 quarkus.http.port=8080
