competencies vertaald naar Nederlands

--- a/src/main/resources/seed/competencies.yaml
+++ b/src/main/resources/seed/competencies.yaml
@@ -3,154 +3,149 @@ categories:
     skills:
       - name: "Java"
         levels:
-          basic: "Can write basic Java code, understands syntax and simple data structures"
-          decent: "Writes clean code, understands OOP principles, uses collections effectively"
-          good: "Designs maintainable systems, proficient with streams and generics"
-          excellent: "Masters advanced patterns, contributes to architectural decisions"
+          basic: "Kan basis Java code schrijven, begrijpt syntax en eenvoudige datastructuren"
+          decent: "Schrijft schone code, begrijpt OOP principes, gebruikt collections effectief"
+          good: "Ontwikkelt onderhoudbare systemen, is bedreven met streams en generics"
+          excellent: "Beheerst geavanceerde patronen, draagt bij aan architectonische beslissingen"
       - name: "Python"
         levels:
-          basic: "Can write scripts and simple programs"
-          decent: "Uses standard library effectively, writes readable code"
-          good: "Builds applications with frameworks, understands async patterns"
-          excellent: "Creates libraries, optimizes performance, mentors others"
+          basic: "Kan scripts en eenvoudige programma's schrijven"
+          decent: "Gebruikt standaardbibliotheek effectief, schrijft leesbare code"
+          good: "Bouw applicaties met frameworks, begrijpt async patronen"
+          excellent: "Creëert bibliotheken, optimaliseert performance, mentort anderen"
       - name: "SQL"
         levels:
-          basic: "Writes simple SELECT, INSERT, UPDATE queries"
-          decent: "Uses JOINs, subqueries, understands indexes"
-          good: "Optimizes complex queries, designs schemas"
-          excellent: "Tunes database performance, designs scalable data models"
+          basic: "Schrijft eenvoudige SELECT, INSERT, UPDATE queries"
+          decent: "Gebruikt JOINs, subqueries, begrijpt indexes"
+          good: "Optimaliseert complexe queries, ontwerpt schemas"
+          excellent: "Stemt database performance af, ontwerpt schaalbare datamodellen"
 
   - name: "Software Design"
     skills:
       - name: "Design Patterns"
         levels:
-          basic: "Recognizes common patterns like Singleton and Factory"
-          decent: "Applies patterns appropriately, understands trade-offs"
-          good: "Combines patterns to solve complex problems"
-          excellent: "Creates domain-specific patterns, teaches others"
+          basic: "Herkent bekende patronen zoals Singleton en Factory"
+          decent: "Past patronen toe waar passend, begrijpt trade-offs"
+          good: "Combineert patronen om complexe problemen op te lossen"
+          excellent: "Creëert domeinspecifieke patronen, leert anderen"
       - name: "Architecture"
         levels:
-          basic: "Understands basic layered architecture"
-          decent: "Designs components with clear boundaries"
-          good: "Designs microservices, evaluates architectural trade-offs"
-          excellent: "Leads system architecture, defines technical strategy"
+          basic: "Begrijpt basis gelaagde architectuur"
+          decent: "Ontwerpt componenten met duidelijke grenzen"
+          good: "Ontwerpt microservices, evalueert architectonische trade-offs"
+          excellent: "Leidt systeemarchitectuur, definieert technische strategie"
       - name: "API Design"
         levels:
-          basic: "Creates basic REST endpoints"
-          decent: "Designs consistent, documented APIs"
-          good: "Builds scalable APIs with versioning and error handling"
-          excellent: "Defines API standards, designs complex integrations"
+          basic: "Creëert basis REST endpoints"
+          decent: "Ontwerpt consistente, gedocumenteerde API's"
+          good: "Bouw schaalbare API's met versiebeheer en foutafhandeling"
+          excellent: "Definieert API standaarden, ontwerpt complexe integraties"
 
   - name: "DevOps & Infrastructure"
     skills:
       - name: "CI/CD"
         levels:
-          basic: "Uses existing pipelines, understands basic concepts"
-          decent: "Creates and maintains build pipelines"
-          good: "Designs deployment strategies, implements blue-green deployments"
-          excellent: "Architects CI/CD platforms, optimizes build times"
+          basic: "Gebruikt bestaande pipelines, begrijpt basis concepten"
+          decent: "Creëert en onderhoudt build pipelines"
+          good: "Ontwerpt deployment strategieën, implementeert blue-green deployments"
+          excellent: "Architecteert CI/CD platforms, optimaliseert build tijden"
       - name: "Kubernetes"
         levels:
-          basic: "Deploys basic applications, understands pods and services"
-          decent: "Manages deployments, configures ingress and volumes"
-          good: "Designs highly available deployments, implements autoscaling"
-          excellent: "Operates production clusters, defines platform standards"
+          basic: "Deployt basis applicaties, begrijpt pods en services"
+          decent: "Beheert deployments, configureert ingress en volumes"
+          good: "Ontwerpt hoogbeschikbare deployments, implementeert autoscaling"
+          excellent: "Beheert productie clusters, definieert platform standaarden"
       - name: "Cloud Platforms"
         levels:
-          basic: "Uses basic cloud services (compute, storage)"
-          decent: "Deploys applications, manages cloud resources"
-          good: "Designs cloud-native architectures, implements IaC"
-          excellent: "Optimizes costs, architects multi-region solutions"
+          basic: "Gebruikt basis cloud services (compute, storage)"
+          decent: "Deployt applicaties, beheert cloud resources"
+          good: "Ontwerpt cloud-native architecturen, implementeert IaC"
+          excellent: "Optimaliseert kosten, architecteert multi-regio oplossingen"
 
   - name: "Quality & Testing"
     skills:
       - name: "Unit Testing"
         levels:
-          basic: "Writes basic unit tests"
-          decent: "Uses mocking, achieves good coverage"
-          good: "Practices TDD, designs testable code"
-          excellent: "Defines testing strategies, mentors testing practices"
+          basic: "Schrijft basis unit tests"
+          decent: "Gebruikt mocking, bereikt goede dekking"
+          good: "Praktiseert TDD, ontwerpt testbare code"
+          excellent: "Definieert test strategieën, mentort test practices"
       - name: "Integration Testing"
         levels:
-          basic: "Understands integration testing concepts"
-          decent: "Writes integration tests with test databases"
-          good: "Tests complex integrations, uses contract testing"
-          excellent: "Designs integration test frameworks"
+          basic: "Begrijpt integratie testing concepten"
+          decent: "Schrijft integratie tests met test databases"
+          good: "Test complexe integraties, gebruikt contract testing"
+          excellent: "Ontwerpt integratie test frameworks"
       - name: "Code Review"
         levels:
-          basic: "Participates in code reviews"
-          decent: "Provides constructive feedback"
-          good: "Reviews architectural decisions, mentors juniors"
-          excellent: "Defines review standards, coaches reviewers"
+          basic: "Neemt deel aan code reviews"
+          decent: "Geeft constructieve feedback"
+          good: "Beoordeelt architectonische beslissingen, mentort junioren"
+          excellent: "Definieert review standaarden, coacht reviewers"
+
   - name: "Soft Skills"
     skills:
       - name: "Communication"
         levels:
-          basic: "Communicates within team, asks questions"
-          decent: "Explains technical concepts to non-technical stakeholders"
-          good: "Facilitates discussions, presents to larger groups"
-          excellent: "Represents team externally, influences stakeholders"
+          basic: "Communiceert binnen team, stelt vragen"
+          decent: "Legt technische concepten uit aan niet-technische stakeholders"
+          good: "Faciliteert discussies, presenteert aan grotere groepen"
+          excellent: "Vertegenwoordigt team extern, beïnvloedt stakeholders"
       - name: "Mentoring"
         levels:
-          basic: "Helps teammates when asked"
-          decent: "Actively shares knowledge within team"
-          good: "Formally mentors junior developers"
-          excellent: "Develops mentoring programs, grows future mentors"
+          basic: "Helpt teamgenoten wanneer gevraagd"
+          decent: "Deelt actief kennis binnen team"
+          good: "Mentort formeel junior developers"
+          excellent: "Ontwikkelt mentoring programma's, groeit toekomstige mentors"
       - name: "Problem Solving"
         levels:
-          basic: "Solves well-defined problems"
-          decent: "Breaks down complex problems into manageable parts"
-          good: "Identifies root causes, proposes systemic solutions"
-          excellent: "Solves ambiguous problems, innovates solutions"
+          basic: "Lost goed gedefinieerde problemen op"
+          decent: "Breekt complexe problemen op in beheersbare delen"
+          good: "Identificeert root causes, stelt systemische oplossingen voor"
+          excellent: "Lost ambigue problemen op, innoveert oplossingen"
       - name: "Presentation"
         levels:
-          basic: "Presents work clearly in small meetings"
-          decent: "Explains technical topics with supporting visuals"
-          good: "Delivers structured presentations to wider groups"
-          excellent: "Shapes narratives and influences large audiences"
+          basic: "Presenteert werk duidelijk in kleine bijeenkomsten"
+          decent: "Legt technische onderwerpen uit met visuele ondersteuning"
+          good: "Levert gestructureerde presentaties aan grotere groepen"
+          excellent: "Vormt narratieven en beïnvloedt grote publieks"
       - name: "Stakeholder Management"
         levels:
-          basic: "Identifies key stakeholders and expectations"
-          decent: "Maintains clear communication with stakeholders"
-          good: "Aligns stakeholders on priorities and trade-offs"
-          excellent: "Builds long-term trust across the organization"
+          basic: "Identificeert belangrijke stakeholders en verwachtingen"
+          decent: "Onderhoudt duidelijke communicatie met stakeholders"
+          good: "Stemt stakeholders af op prioriteiten en trade-offs"
+          excellent: "Bouw langetermijn vertrouwen op in de organisatie"
+      - name: "Motiveren"
+        levels:
+          basic: "Toont enthousiasme en energie in eigen werk"
+          decent: "Inspireert teamgenoten door positieve houding"
+          good: "Motiveert anderen door doelen en vooruitgang te tonen"
+          excellent: "Creëert een cultuur van motivatie en eigenaarschap"
 
   - name: "Architecture Frameworks"
     skills:
       - name: "TOGAF"
         levels:
-          basic: "Understands TOGAF terminology and basic concepts"
-          decent: "Applies TOGAF practices to project planning"
-          good: "Guides architecture decisions using TOGAF"
-          excellent: "Leads enterprise initiatives with TOGAF"
+          basic: "Begrijpt TOGAF terminologie en basis concepten"
+          decent: "Past TOGAF practices toe op projectplanning"
+          good: "Leidt architectonische beslissingen met TOGAF"
+          excellent: "Leidt enterprise initiatieven met TOGAF"
       - name: "ArchiMate"
         levels:
-          basic: "Reads ArchiMate diagrams with guidance"
-          decent: "Creates basic ArchiMate models"
-          good: "Uses ArchiMate to explain architecture impacts"
-          excellent: "Defines standards for ArchiMate modeling"
+          basic: "Leest ArchiMate diagrammen met begeleiding"
+          decent: "Creëert basis ArchiMate modellen"
+          good: "Gebruikt ArchiMate om architectuur impact uit te leggen"
+          excellent: "Definieert standaarden voor ArchiMate modellering"
       - name: "iSAQB"
         levels:
-          basic: "Understands iSAQB curriculum basics"
-          decent: "Applies iSAQB modules in design discussions"
-          good: "Leads architecture reviews with iSAQB guidance"
-          excellent: "Mentors teams in iSAQB-aligned practices"
-      - name: "Presentation"
-        levels:
-          basic: ""
-          decent: ""
-          good: ""
-          excellent: ""
-      - name: "Stakeholder Management"
-        levels:
-          basic: ""
-          decent: ""
-          good: ""
-          excellent: ""
+          basic: "Begrijpt iSAQB curriculum basis"
+          decent: "Past iSAQB modules toe in design discussies"
+          good: "Leidt architecture reviews met iSAQB begeleiding"
+          excellent: "Mentort teams in iSAQB-gealigneerde practices"
 
 roles:
   - name: "Junior Developer"
-    description: "Entry-level software developer learning the fundamentals"
+    description: "Junior software developer die de fundamenten leert"
     requirements:
       - skill: "Java"
         category: "Programming"
@@ -169,7 +164,7 @@ roles:
         level: "basic"
 
   - name: "Medior Developer"
-    description: "Experienced developer working independently on features"
+    description: "Ervaren developer die zelfstandig aan features werkt"
     requirements:
       - skill: "Java"
         category: "Programming"
@@ -206,7 +201,7 @@ roles:
         level: "decent"
 
   - name: "Senior Developer"
-    description: "Technical leader guiding team decisions and mentoring"
+    description: "Technische leider die team beslissingen begeleidt en mentort"
     requirements:
       - skill: "Java"
         category: "Programming"
@@ -255,7 +250,7 @@ roles:
         level: "good"
 
   - name: "Specialist Developer"
-    description: "Deep technical expert with mastery in at least one technology domain (e.g., Java ecosystem, data engineering, security) who provides specialized consulting and drives excellence in their area"
+    description: "Diepgaand technisch expert met beheersing in ten minste één technologisch domein (bijv. Java ecosysteem, data engineering, beveiliging) die gespecialiseerde consulting levert en excellentie in hun gebied stimuleert"
     requirements:
       - skill: "Java"
         category: "Programming"
@@ -289,7 +284,7 @@ roles:
         level: "excellent"
 
   - name: "Lead Developer"
-    description: "Guides development team through technical decisions, removes blockers, and ensures delivery quality while maintaining hands-on development"
+    description: "Begeleidt development team door technische beslissingen, verwijdert blockers, en zorgt voor delivery kwaliteit terwijl hands-on development behouden blijft"
     requirements:
       - skill: "Java"
         category: "Programming"
@@ -336,13 +331,16 @@ roles:
       - skill: "Stakeholder Management"
         category: "Soft Skills"
         level: "decent"
+      - skill: "Motiveren"
+        category: "Soft Skills"
+        level: "decent"
 
   - name: "Lead Developer / Software Architect"
-    description: "Hybrid role combining hands-on team leadership with architectural design, bridging technical implementation and organizational strategy"
+    description: "Hybride rol die hands-on team leadership combineert met architectonisch design, overbrugt technische implementatie en organisatorische strategie"
     requirements:
       - skill: "Java"
         category: "Programming"
-        level: "excellent"
+        level: "good"
       - skill: "Design Patterns"
         category: "Software Design"
         level: "excellent"
@@ -379,12 +377,15 @@ roles:
       - skill: "Stakeholder Management"
         category: "Soft Skills"
         level: "good"
+      - skill: "Motiveren"
+        category: "Soft Skills"
+        level: "decent"
       - skill: "iSAQB"
         category: "Architecture Frameworks"
         level: "decent"
 
   - name: "Software Architect"
-    description: "Defines technical strategy and standards across development and platform teams, aligns architecture with IT management objectives, and ensures technical coherence across the IT organization"
+    description: "Definieert technische strategie en standaarden across development en platform teams, aligneert architectuur met IT management doelstellingen, en zorgt voor technische coherentie across de IT organisatie"
     requirements:
       - skill: "Java"
         category: "Programming"
@@ -432,9 +433,8 @@ roles:
         category: "Architecture Frameworks"
         level: "excellent"
 
-
   - name: "Solution Architect"
-    description: "Partners with business stakeholders to understand requirements, models business processes and domains, and designs solutions that deliver business value while integrating with enterprise architecture"
+    description: "Partnert met business stakeholders om vereisten te begrijpen, modelleert business processen en domeinen, en ontwerpt oplossingen die business value leveren terwijl integratie met enterprise architectuur gewaarborgd is"
     requirements:
       - skill: "Java"
         category: "Programming"
@@ -474,7 +474,7 @@ roles:
         level: "decent"
 
   - name: "DevOps Engineer"
-    description: "Infrastructure and automation specialist"
+    description: "Infrastructure en automation specialist"
     requirements:
       - skill: "Python"
         category: "Programming"
